--- a/public/src/css/spendee.css
+++ b/public/src/css/spendee.css
@@ -1,3 +1,228 @@
+._2AsN .LB4I ._3fS2.o-cw div .oTaE {
+  width: 100%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._289Q {
+  margin-top: 0;
+  padding-top: 5px;
+  padding-left: 15px;
+  font-size: 14px;
+  background: #fff;
+  transition: transform 0.3s;
+  border-radius: 8px 8px 0 0;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._289Q .LB4I ._3fS2._1SIO._22vv._3Qdf._3wdJ {
+  opacity: 1;
+  pointer-events: all;
+  display: initial;
+  flex-basis: 75%;
+  max-width: 75%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._289Q .LB4I ._3fS2._1SIO._22vv._3Qdf._3wdJ ._1kYs {
+  font-size: 14px;
+  font-weight: 600;
+  display: block;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._289Q .LB4I ._3fS2._1SIO._22vv._229f._1B3o {
+  opacity: 1;
+  pointer-events: all;
+  display: initial;
+  flex-basis: 25%;
+  max-width: 25%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._289Q .LB4I ._3fS2._1SIO._22vv._229f._1B3o ._1SEH {
+  text-align: right;
+  font-weight: 700;
+  margin-right: 1rem;
+  color: #93a1aa;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 {
+  top: 0;
+  position: relative;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj {
+  position: relative;
+  z-index: 1;
+  transition: z-index 0.35s step-end;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O {
+  margin: 0;
+  font-size: 14px;
+  color: #324c5b;
+  padding: 0 15px;
+  background: #fff;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI {
+  padding: 3px 0;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T {
+  border-radius: 12px;
+  flex-wrap: nowrap;
+  padding: 5px 0;
+  display: flex;
+  flex: 0 1 auto;
+  flex-direction: row;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy {
+  flex-direction: row;
+  flex-basis: 0;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K {
+  font-size: 14px;
+  color: #7b93a4;
+  display: flex;
+  align-items: center;
+  transition: color 0.2s ease-in-out;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K:hover ._17Fo._2Tq6 {
+  border-color: #12c48b;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K ._17Fo._2Tq6 {
+  width: 20px;
+  min-width: 20px;
+  height: 20px;
+  min-height: 20px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  border-color: #e5ebee;
+  position: relative;
+  margin-right: 14px;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K ._17Fo._2Tq6 ._4Nff {
+  box-shadow: none;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  transition: box-shadow 0.2s cubic-bezier(0, 1.05, 0.72, 1.07);
+  cursor: pointer;
+  width: 20px;
+  min-width: 20px;
+  height: 20px;
+  min-height: 20px;
+  border-color: #e5ebee;
+  top: -1px;
+  left: -1px;
+  position: absolute;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K ._17Fo._2Tq6 ._4Nff::after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 7px;
+  width: 5px;
+  height: 11px;
+  opacity: 1;
+  transform: rotate(45deg) scale(1);
+  border-right: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+  transition-delay: 0.15s;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._2k7K ._17Fo._2Tq6._3FsX ._4Nff {
+  box-shadow: 0px 0px 0px 10px #12c48b inset;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2.pwUH.cuNy ._3-9b._1Oob {
+  min-width: 34px;
+  min-height: 34px;
+  max-height: 34px;
+  width: 34px;
+  height: 34px;
+  border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 {
+  display: flex;
+  flex-grow: 1;
+  overflow: hidden;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH._3eZo {
+  flex-basis: 16.66666667%;
+  min-width: 16.66666667%;
+  max-width: 16.66666667%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH._15HY {
+  flex-basis: 33.33333333%;
+  min-width: 33.33333333%;
+  max-width: 33.33333333%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH._2Be4 {
+  flex-grow: 0;
+  flex-shrink: 0;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH._2Be4:before {
+  content: "";
+  display: block;
+  width: 32px;
+  height: 32px;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH.cycle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH.cycle::before {
+  display: inline;
+  content: "---";
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH.reminder {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  flex-basis: 0;
+  max-width: 100%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T .LB4I.YM-8 ._3fS2.pwUH.reminder::before {
+  display: inline;
+  content: "---";
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2._5CwE._2u24.pwUH._17bJ {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  min-width: 16.66666667%;
+  max-width: 16.66666667%;
+  flex-basis: 16.66666667%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2._5CwE._2u24.pwUH._17bJ .VSBN {
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._1BwG._1tO1 .jcQj ._262O .XuJI .LB4I._3J0T ._3fS2._5CwE._2u24.pwUH._17bJ .VSBN ._3Tj5._210- {
+  font-weight: 700;
+  text-align: right;
+  white-space: nowrap;
+  color: #f14c52;
+}
+._2AsN .LB4I ._3fS2.o-cw div .oTaE div ._2Pnj {
+  display: block;
+  width: 100%;
+  height: 10px;
+}
+
 ._2ylm div ._2tU6 {
   position: relative;
   width: 90%;
@@ -1322,6 +1547,76 @@ nav, ul, ol {
   flex-direction: row;
   flex-wrap: wrap;
 }
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs {
+  padding: 0.5rem;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs div .egUi.addInverse._3SdL._2_oj._1mpn._3dgm {
+  background-color: #12c48b;
+  color: #fff;
+  box-shadow: 0 4px 4px 0 rgba(17, 195, 139, 0.2);
+  width: auto;
+  padding: 0 0.8em;
+  text-align: center;
+  position: relative;
+  display: block;
+  height: 34px;
+  border-radius: 4px;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  font-size: 14px;
+  font-weight: 600;
+  border: none;
+  overflow: hidden;
+  line-height: 34px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs div .egUi.addInverse._3SdL._2_oj._1mpn._3dgm:hover {
+  box-shadow: 0 5px 6px 0 rgba(17, 195, 139, 0.32);
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs div .egUi.addInverse._3SdL._2_oj._1mpn._3dgm ._2nf9 {
+  display: inline-block;
+  position: relative;
+  top: -1px;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs div .egUi.addInverse._3SdL._2_oj._1mpn._3dgm ._2nf9 svg path {
+  fill: #fff;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1GHs div .egUi.addInverse._3SdL._2_oj._1mpn._3dgm .A4xM {
+  margin-left: 10px;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1Izi._3dgm {
+  display: block;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1Izi {
+  display: none;
+  flex-grow: 0 !important;
+  flex: 0 0 auto;
+  flex-basis: 0;
+  max-width: 100%;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1Izi div ._3rfO.TFIa {
+  -webkit-animation: TFIa 0.8s;
+          animation: TFIa 0.8s;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  white-space: nowrap;
+  text-decoration: none;
+  height: 36px;
+  background: white;
+  float: right;
+  padding: 0 0.8rem;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  color: #7b93a4;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2._1Izi div ._3rfO.TFIa:hover {
+  color: #12c48b;
+}
 .UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 {
   padding: 0.5rem;
   flex: 0 0 auto;
@@ -1329,20 +1624,94 @@ nav, ul, ol {
   flex-basis: 0;
   max-width: 100%;
 }
-.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body .Kevi input {
-  width: 100%;
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body {
+  position: relative;
+  display: flex;
+  z-index: 1;
+  transition: z-index 0.35s step-end;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body ._6Szy._2pOY {
+  margin-right: 0.7rem;
+  width: 36px;
   height: 36px;
-  font-size: 14px;
+  flex-shrink: 0;
+  display: flex;
   background: white;
-  border: 0;
-  color: #324c5b;
   border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body .Kevi {
+  display: flex;
+  flex-grow: 1;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body .Kevi .A3jv {
+  height: 36px;
+  border: none;
+  background: white;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  transition: color 0.2s ease-in-out;
   outline: none;
-  text-align: center;
+  flex-grow: 1;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #324c5b;
+  padding: 0;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body .Kevi .A3jv .GK__ {
+  padding: 0 9px 0 0;
+  display: flex;
+  position: relative;
+  flex-grow: 1;
+  align-items: center;
+  justify-content: flex-end;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body .Kevi .A3jv .GK__ .Olv6 {
+  position: absolute;
+  left: 9px;
+  right: 32px;
+  top: 0;
+  bottom: 0;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-align: left;
+}
+.UzPn._10vh ._2AsN .oTaE .LB4I.panel ._3fS2 form .body ._6Szy._2sWB {
+  margin-left: 0.7rem;
+  width: 36px;
+  height: 36px;
+  flex-shrink: 0;
+  display: flex;
+  background: white;
+  border-radius: 4px;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
 }
 .UzPn._10vh ._2AsN .oTaE .LB4I.panel ._1GHs {
   flex-grow: 1;
   flex-shrink: 0;
+}
+
+.UzPn._10vh.zpcn {
+  z-index: 9;
+  background: #f4f7fa;
+}
+.UzPn._10vh.zpcn::after {
+  z-index: 10;
+  content: "";
+  pointer-events: none;
+  position: absolute;
+  top: 100%;
+  height: 10px;
+  left: 0;
+  right: 0;
+  background-image: linear-gradient(180deg, rgba(48, 82, 120, 0.12), rgba(48, 82, 120, 0));
 }
 
 ._2AsN .LB4I {
@@ -1502,6 +1871,11 @@ nav, ul, ol {
   font-weight: 700;
   font-size: 13px;
   line-height: 31px;
+}
+._2AsN .LB4I ._3fS2.o-cw form .oTaE ._3wsj .LB4I ._3fS2._2pKn .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control .Select-value ._8Sy_ ._3q8K .w0QU._3FJM span img {
+  width: 28px;
+  height: 28px;
+  margin-bottom: 5px;
 }
 ._2AsN .LB4I ._3fS2.o-cw form .oTaE ._3wsj .LB4I ._3fS2._2pKn .iLEV.IhHS ._3Iet.IhHS ._2ieP .Select-control .Select-value ._8Sy_ ._3UJt {
   display: flex;
