--- a/public/src/css/auth/_login.scss
+++ b/public/src/css/auth/_login.scss
@@ -11,7 +11,7 @@
             background: #fff;
             border-radius: 4px;
             margin-top: 8px;
-            box-shadow: 0 4px 8px 0 rgb(48 82 120 / 16%);
+            box-shadow: 0 4px 8px 0 rgba(48,82,120,0.16);
 
             section{
                 ._2UJB{
