--- a/public/src/css/settings/_account.scss
+++ b/public/src/css/settings/_account.scss
@@ -646,3 +646,231 @@
         }
     }
 }
+
+.ReactModal__Overlay{
+    opacity: 0;
+    z-index: -1000;
+    transition: opacity 200ms ease-in-out;
+    padding-top: 60px;
+    padding-bottom: 20px;
+    overflow: auto;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, .6);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .ReactModal__Content.ReactModal__Content--after-open._2RxW{
+        position: relative;
+        overflow: visible;
+        border-radius: 4px;
+        box-shadow: 0 4px 8px 0 rgba(48,82,120,0.16);
+        outline: none;
+        background: #fff;
+        margin: auto;
+
+        ._3EUw{
+            form{
+                ._2ZwS {
+                    min-width: 460px;
+                    max-width: 460px;
+                    margin: 40px 50px;
+
+                    ._13pY{
+                        ._36Dk{
+                            position: absolute;
+                            right: 0;
+                            top: 0;
+                            transform: translate(50%, -50%);
+
+                            .egUi.B8bm {
+                                font-size: 14px;
+                                border-radius: 50%;
+                                background: #7b93a4;
+                                color: #fff;
+                                transition: background-color .2s ease-in-out;
+                                width: 30px;
+                                height: 30px;
+                                text-align: center;
+                                border: none;
+                                cursor: pointer;
+
+                                ._2nf9{
+                                    display: inline-block;
+                                    position: relative;
+                                    top: -1px;
+                                }
+                            }
+                        }
+
+                        ._1Fvn{
+                            color: #324c5b;
+                            font-size: 24px;
+                            text-align: center;
+                            font-weight: 500;
+                            margin-top: 0px;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            margin-bottom: 18px;
+                            margin: 0.67em 0;
+                        }
+
+                        .j4fJ{
+                            z-index: -1;
+
+                            p{
+                                margin-bottom: 25px;
+                                line-height: 1.57;
+                                text-align: center;
+                            }
+
+                            ._1V4J{
+                                width: 70%;
+                                margin: 10px auto;
+
+                                ._2k7K._3fHy{
+                                    font-size: 14px;
+                                    color: #7b93a4;
+                                    display: flex;
+                                    transition: color .2s ease-in-out;
+                                    width: 100%;
+                                    margin-bottom: 15px;
+                                    align-items: flex-start !important;
+
+                                    &:hover{
+                                        ._17Fo._1D3_{
+                                            border-color: #12c48b;
+                                        }
+                                    }
+
+                                    ._17Fo._1D3_{
+                                        width: 20px;
+                                        min-width: 20px;
+                                        height: 20px;
+                                        min-height: 20px;
+                                        border-radius: 4px;
+                                        border: 1px solid transparent;
+                                        border-color: #e5ebee;
+                                        position: relative;
+                                        margin-right: 12px;
+
+                                        ._4Nff{
+                                            display: inline-flex;
+                                            align-items: center;
+                                            justify-content: center;
+                                            border-radius: 4px;
+                                            transition: box-shadow .2s cubic-bezier(0,1.05,.72,1.07), -webkit-box-shadow .2s cubic-bezier(0,1.05,.72,1.07);
+                                            cursor: pointer;
+                                            width: 20px;
+                                            min-width: 20px;
+                                            height: 20px;
+                                            min-height: 20px;
+                                            border-color: #e5ebee;
+                                            top: -1px;
+                                            left: -1px;
+                                            position: absolute;
+
+                                            &::after{
+                                                content: '';
+                                                position: absolute;
+                                                top: 3px;
+                                                left: 7px;
+                                                width: 5px;
+                                                height: 11px;
+                                                opacity: 0;
+                                                transform: rotate(
+                                                    45deg) scale(0);
+                                                border-right: 2px solid #fff;
+                                                border-bottom: 2px solid #fff;
+                                                transition-delay: .15s;
+                                            }
+                                        }
+                                    }
+
+                                    ._17Fo._1D3_._3FsX{
+                                        ._4Nff{
+                                            box-shadow: 0px 0px 0px 10px #12c48b inset;
+
+                                            &::after{
+                                                transform: rotate(45deg) scale(1);
+                                                opacity: 1;
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+
+                    ._2axu{
+                        width: 70%;
+                        margin: 10px auto;
+                        display: flex;
+                        flex-direction: column;
+                        align-items: center;
+                        flex-shrink: 0;
+
+                        ._3SdL._1_Kr {
+                            &:disabled{
+                                background-color: #e5ebee;
+                                color: #7b93a4;
+                                box-shadow: none;
+                                cursor: pointer;
+                            }
+
+                            width: 100%;
+                            margin-bottom: 15px;
+                            background-color: #f14c52;
+                            color: #fff;
+                            transition: all .2s ease-in-out;
+                            cursor: initial;
+                            position: relative;
+                            display: block;
+                            height: 34px;
+                            line-height: 34px;
+                            padding: 0 8px;
+                            border-radius: 4px;
+                            text-align: center;
+                            text-decoration: none;
+                            outline: none;
+                            font-size: 14px;
+                            font-weight: 600;
+                            border: none;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                        }
+
+                        ._3WuR._1gOp {
+                            margin-bottom: 0;
+                            text-align: center;
+                            width: 100%;
+                            position: relative;
+                            display: inline;
+                            color: #7b93a4;
+                            border: none;
+                            cursor: pointer;
+                            outline: none;
+                            text-decoration: underline;
+                            white-space: nowrap;
+                            transition: color .2s ease-in-out;
+
+                            &:hover{
+                                text-decoration: none;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+.ReactModal__Overlay.ReactModal__Overlay--after-open{
+    opacity: 1;
+    z-index: 1000;
+}
